@@ -1,6 +1,7 @@
 package it.polimi.ingsw.view.tui;
 
 import com.diogonunes.jcolor.Attribute;
+import it.polimi.ingsw.model.BoardSquareType;
 import it.polimi.ingsw.model.TileSubject;
 import it.polimi.ingsw.model.TileType;
 import it.polimi.ingsw.utils.Coordinate;
@@ -13,30 +14,18 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.PrintStream;
+import java.rmi.NotBoundException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
+import java.util.concurrent.locks.Lock;
+import java.util.concurrent.locks.ReentrantLock;
 
 import static com.diogonunes.jcolor.Ansi.colorize;
+import static it.polimi.ingsw.model.BoardSquareType.*;
+import static it.polimi.ingsw.model.BoardSquareType.THREE_DOTS;
 
 public class TUI extends UI implements Runnable{
-    public static final String ANSI_RESET = "\u001B[0m";
-    public static final String ANSI_BLACK = "\u001B[30m";
-    public static final String ANSI_RED = "\u001B[31m";
-    public static final String ANSI_GREEN = "\u001B[32m";
-    public static final String ANSI_YELLOW = "\u001B[33m";
-    public static final String ANSI_BLUE = "\u001B[34m";
-    public static final String ANSI_PURPLE = "\u001B[35m";
-    public static final String ANSI_CYAN = "\u001B[36m";
-    public static final String ANSI_WHITE = "\u001B[37m";
-    public static final String ANSI_BLACK_BACKGROUND = "\u001B[40m";
-    public static final String ANSI_RED_BACKGROUND = "\u001B[41m";
-    public static final String ANSI_GREEN_BACKGROUND = "\u001B[42m";
-    public static final String ANSI_YELLOW_BACKGROUND = "\u001B[43m";
-    public static final String ANSI_BLUE_BACKGROUND = "\u001B[44m";
-    public static final String ANSI_PINK_BACKGROUND = "\u001B[105m";
-    public static final String ANSI_CYAN_BACKGROUND = "\u001B[46m";
-    public static final String ANSI_WHITE_BACKGROUND = "\u001B[47m";
     private static final int DIM_BOARD = 9;
     private static final int DIMCOL_BOOKSHELF = 5;
     private static final int DIMROW_BOOKSHELF = 6;
@@ -44,7 +33,20 @@ public class TUI extends UI implements Runnable{
     private final BufferedReader bufferedReader;
     private final PrintStream out = System.out;
     private TUIState state;
-    private final Object lock = new Object();
+    public static final BoardSquareType[][] INIT_MATRIX = {
+            {null, null, null, THREE_DOTS, FOUR_DOTS, null, null, null, null},
+            {null, null, null, NO_DOTS, NO_DOTS, FOUR_DOTS, null, null, null},
+            {null, null, THREE_DOTS, NO_DOTS, NO_DOTS, NO_DOTS, THREE_DOTS, null, null},
+            {null, FOUR_DOTS, NO_DOTS, NO_DOTS, NO_DOTS, NO_DOTS, NO_DOTS, NO_DOTS, THREE_DOTS},
+            {FOUR_DOTS, NO_DOTS, NO_DOTS, NO_DOTS, NO_DOTS, NO_DOTS, NO_DOTS, NO_DOTS, FOUR_DOTS},
+            {THREE_DOTS, NO_DOTS, NO_DOTS, NO_DOTS, NO_DOTS, NO_DOTS, NO_DOTS, FOUR_DOTS, null},
+            {null, null, THREE_DOTS, NO_DOTS, NO_DOTS, NO_DOTS, THREE_DOTS, null, null},
+            {null, null, null, FOUR_DOTS, NO_DOTS, NO_DOTS, null, null, null},
+            {null, null, null, null, FOUR_DOTS, THREE_DOTS, null, null, null}
+    };
+
+    private final Lock lock = new ReentrantLock();
+
 
     private enum TUIState{
         HOME,
@@ -65,12 +67,35 @@ public class TUI extends UI implements Runnable{
     }
 
     @Override
+    protected void onNewMessage(String sender) {
+        lock.lock();
+        if(!sender.equals(getModel().getThisPlayer())) {
+            out.println("New Message from " + sender);
+        }
+        lock.unlock();
+    }
+
+    @Override
+    protected void onCurrentPlayerChanged(String newCurrentPlayer) {
+        lock.lock();
+        out.println("There is a new current player, please refresh the page...");
+        lock.unlock();
+    }
+
+    @Override
     public void run() {
         try {
-            welcome();
+            lock.lock();
+            welcome(true);
+            Thread.sleep(1000);
             home();
             out.println("Please, enter help to learn how to play!");
             while(true) {
+                lock.unlock();
+                while(!bufferedReader.ready()) {
+                    Thread.sleep(50);
+                }
+                lock.lock();
                 String input = bufferedReader.readLine();
                 switch (input) {
                     case "help":
@@ -79,7 +104,7 @@ public class TUI extends UI implements Runnable{
                         break;
                     case "quit":
                         getLogicController().quitGame();
-                        welcome();
+                        welcome(false);
                         break;
                     case "message":
                         out.println("Please, enter the following information:");
@@ -126,25 +151,41 @@ public class TUI extends UI implements Runnable{
                         }
                         break;
                     case "play":
-                        out.println("It's your turn to play! Please enter the coordinate of the tiles you want to take from the board, then type fine");
+                        out.println("It's your turn to play! Please enter the coordinate of the tiles you want to take from the board, then type " + colorize("end", Attribute.BOLD()));
                         List<Coordinate> tiles = new ArrayList<>();
-                        String coord = readLine();
-                        while (!coord.equals("fine")) {
-                            tiles.add(new Coordinate(coord.charAt(0) - 'A', coord.charAt(1)));
+                        String coord = "";
+                        while (true) {
+                            coord = readLine();
+                            if(coord.equals("end")){
+                                break;
+                            }
+                            tiles.add(new Coordinate(coord.charAt(0) - 'A', Integer.parseInt(String.valueOf(coord.charAt(1)))-1 ));
                         }
                         out.println("Now enter the number, between 1 and 5, of the column of your bookshelf where to insert the chosen tiles:");
                         String num = readLine();
                         while (!num.equals("1") && !num.equals("2") && !num.equals("3") && !num.equals("4") && !num.equals("5")) {
-                            out.println("Something went wrong, please again the number:");
+                            out.println("Something went wrong, please enter again the number:");
                             num = readLine();
                         }
-                        int n = num.charAt(0);
+                        int n = Integer.parseInt(String.valueOf(num.charAt(0)))-1;
                         out.println("Moving the tiles from the board to you bookshelf...");
                         getLogicController().dragTilesToBookShelf(tiles, n);
                         break;
+                    default :
+                        reset();
+                        home();
+                        if(state.equals(TUIState.CHAT)){
+                            showChat();
+                        } else if (state.equals(TUIState.OTHERS)) {
+                            showBookshelves();
+                        } else if (state.equals(TUIState.LEGEND)) {
+                            printLegendMoves();
+                        } else if (state.equals(TUIState.END)) {
+                            showWinner();
+                        }
                 }
             }
-        } catch (IOException e) {
+        } catch (IOException | NotBoundException | ClassNotFoundException | InterruptedException e) {
             throw new RuntimeException(e);
         }
 
@@ -156,16 +197,13 @@ public class TUI extends UI implements Runnable{
 
     private String readLine() throws IOException {
         String input;
-        synchronized (lock){
-            input = bufferedReader.readLine();
-        }
+        input = bufferedReader.readLine();
         return input;
     }
 
-    private void welcome() throws IOException {
-        synchronized (lock) {
-            String choice;
-            out.print("""
+    private void welcome(boolean fromTheBeginning) throws IOException, NotBoundException, ClassNotFoundException {
+        String choice;
+        out.print("""
                           .         .                                                                                                                                   \s
                          ,8.       ,8.   `8.`8888.      ,8'              d888888o.   8 8888        8 8 8888888888   8 8888         8 8888888888    8 8888 8 8888888888  \s
                         ,888.     ,888.   `8.`8888.    ,8'             .`8888:' `88. 8 8888        8 8 8888         8 8888         8 8888          8 8888 8 8888        \s
@@ -178,42 +216,52 @@ public class TUI extends UI implements Runnable{
                  ,8'       `8        `8.`8888.  8 8888                `8b.  ;8.`8888 8 8888        8 8 8888         8 8888         8 8888          8 8888 8 8888        \s
                 ,8'         `         `8.`8888. 8 8888                 `Y8888P ,88P' 8 8888        8 8 888888888888 8 888888888888 8 8888          8 8888 8 888888888888\s
                 """);
-            out.println("Welcome to My Shelfie!");
+        out.println("Welcome to My Shelfie!");
+        if(fromTheBeginning) {
             System.out.println("Choose one of the following protocols:");
             System.out.println("1) Socket");
             System.out.println("2) Remote Methode Invocation");
             String protocolChoice = bufferedReader.readLine();
+            System.out.println("Please enter the server address: ");
+            String host = bufferedReader.readLine();
+            System.out.println("Now enter the port number");
+            int port = Integer.parseInt(bufferedReader.readLine());
             if(protocolChoice.equals("1")) {
-                getLogicController().chosenSocket(0, null);
+                getLogicController().chosenSocket(port, host);
             }
             else if(protocolChoice.equals("2")) {
-                getLogicController().chosenRMI(0, null);
+                getLogicController().chosenRMI(port, host);
             }
+        }
 
-            out.println("Now insert your unique nickname: ");
-            String nickname = readLine();
-            out.println("Ok, now chose one of the following options: ");
-            out.println("1) create a new game");
-            out.println("2) join an existing game");
-            out.println("3) rejoin an existing game after a disconnection");
-            choice = readLine();
-            switch (choice) {
-                case "1" -> {
-                    out.println("So you need to let us know with how many people you want to play with (it has to be a number between 1 and 3) :");
-                    int numberOfPlayer = Integer.parseInt(readLine()) + 1;
-                    getLogicController().createGame(nickname, numberOfPlayer);
-                }
-                case "2", "3" -> getLogicController().joinGame(nickname);
-                default -> {
-                }
+
+        out.println("Now insert your unique nickname: ");
+        String nickname = readLine();
+        out.println("Ok, now chose one of the following options: ");
+        out.println("1) create a new game");
+        out.println("2) join an existing game");
+        out.println("3) rejoin an existing game after a disconnection");
+        choice = readLine();
+        switch (choice) {
+            case "1" -> {
+                out.println("So you need to choose how many people there will be in the game (it has to be a number between 2 and 4, including you) :");
+                int numberOfPlayer = Integer.parseInt(readLine());
+                getLogicController().createGame(nickname, numberOfPlayer);
+            }
+            case "2", "3" -> getLogicController().joinGame(nickname);
+            default -> {
             }
         }
     }
 
     private void home(){ //mostra le cose base
         state = TUIState.HOME;
-        out.println(colorize("MY SHELFIE: HOME OF " + getModel().getThisPlayer(), Attribute.GREEN_TEXT()));
+        out.print(colorize("                                                           ", Attribute.GREEN_BACK()));
+        out.print(colorize("MY SHELFIE: HOME OF " + getModel().getThisPlayer(), Attribute.GREEN_BACK()));
+        out.println(colorize("                                                           ", Attribute.GREEN_BACK()));
+
         printGameState(getModel().getGameState());
+
         out.print("Here are all the players in the game: ");
         for(String name: getModel().getPlayers()){
             out.print(name);
@@ -223,43 +271,62 @@ public class TUI extends UI implements Runnable{
             out.print("   ");
         }
         out.println();
-        out.println("Your points are: ");
+
         List<Integer> points = getModel().getPlayersPoints().get(getModel().getThisPlayer());
-        out.println("Common Goal 1 = " + points.get(0) + printPointOrPoints(points.get(0)));
-        out.println("Common Goal 2 = " + points.get(1) + printPointOrPoints(points.get(1)));
-        out.println("End Game = " + points.get(2) + printPointOrPoints(points.get(2)));
-        out.println("Personal Goal = " + points.get(3) + printPointOrPoints(points.get(3)));
-        out.println("Adjacent Tiles = " + points.get(4) + printPointOrPoints(points.get(4)));
-        int totalScore = getModel().getTotalPointByNickname(getModel().getThisPlayer());
-        out.println("Total Points = " + totalScore + printPointOrPoints(totalScore));
+        if(points!=null) {
+            out.println(colorize("Your points: ",Attribute.BOLD()));
+            out.println("Adjacent Tiles = " + points.get(0) + printPointOrPoints(points.get(0)));
+            out.println("Common Goal 1 =  " + points.get(1) + printPointOrPoints(points.get(1)));
+            out.println("Common Goal 2 =  "+ points.get(2) + printPointOrPoints(points.get(2)));
+            out.println("End Game =       " + points.get(3) + printPointOrPoints(points.get(3)));
+            out.println("Personal Goal =  " + points.get(4) + printPointOrPoints(points.get(4)));
+            int totalScore = getModel().getTotalPointByNickname(getModel().getThisPlayer());
+            out.println(colorize("Total Points", Attribute.BOLD()) + " =   " + totalScore + printPointOrPoints(totalScore));
+        }
+
+        if(getModel().getCommonGoals()[0]!=null || getModel().getCommonGoals()[1]!=null) {
+            out.println();
+            out.println(colorize("Common Goal 1: ", Attribute.BOLD()) + getModel().getCommonGoals()[0] + "\n     " + "Available Score = " + getModel().getAvailableScores().get(0));
+            out.println(colorize("Common Goal 2: ", Attribute.BOLD()) + getModel().getCommonGoals()[1] + "\n     " + "Available Score = " + getModel().getAvailableScores().get(1));
+        }
 
         out.println();
-        out.println("Common Goals are: ");
-        out.println("Common Goal 1: " + getModel().getCommonGoals()[0] + "\n     " + "Available Score = " + getModel().getAvailableScores().get(0));
-        out.println("Common Goal 2: " + getModel().getCommonGoals()[1] + "\n     " + "Available Score = " + getModel().getAvailableScores().get(1));
+        if(getModel().getBoard()!=null && getModel().getBookShelfByNickname(getModel().getThisPlayer())!=null && getModel().getPersonalGoal()!=null) {
+            printBoardBookShelfPersonalGoal(fromTileSubjectToChar(getModel().getBoard(), true),
+                    fromTileSubjectToChar(getModel().getBookShelfByNickname(getModel().getThisPlayer()), false),
+                    fromTileTypeToChar(getModel().getPersonalGoal()));
+        }
 
-        printBoardBookShelfPersonalGoal(fromTileSubjectToChar(getModel().getBoard()),
-                fromTileSubjectToChar(getModel().getBookShelfByNickname(getModel().getThisPlayer())),
-                fromTileTypeToChar(getModel().getPersonalGoal()));
-
-        out.println("Current Player is " + getModel().getCurrentPlayer());
+        if(getModel().getCurrentPlayer() != null) {
+            if(getModel().getCurrentPlayer().equals(getModel().getThisPlayer())){
+                out.println(colorize("It's your turn to play!", Attribute.BOLD(), Attribute.GREEN_TEXT()));
+            } else {
+                out.println(colorize("Current Player is " + getModel().getCurrentPlayer(), Attribute.BOLD(), Attribute.GREEN_TEXT()));
+            }
+        }
     }
 
     private void showChat(){
         state = TUIState.CHAT;
-        out.println(colorize("MY SHELFIE: CHAT", Attribute.GREEN_TEXT()));
+        System.out.print(colorize("                                                                     ", Attribute.GREEN_BACK()));
+        System.out.print(colorize("MY SHELFIE: CHAT", Attribute.GREEN_BACK()));
+        System.out.println(colorize("                                                                     ", Attribute.GREEN_BACK()));
         List<Triple<String, List<String>, String>> messages = getModel().getMessages();
-        for(Triple<String, List<String>, String> message : messages){
-            if(message.getSecond().contains(getModel().getThisPlayer())){
-                String sender = message.getFirst();
-                String priv = privateOrPublicMessage(message.getSecond());
-                if(sender.equals(getModel().getThisPlayer())){
-                    sender = "You";
-                    if(priv.equals("(private)")){
-                        priv = "("+ colorize("private with " + message.getSecond().get(0),Attribute.ITALIC()) + ")";
+        if(messages == null){
+            System.out.println("There aren't any messages yet.");
+        } else {
+            for (Triple<String, List<String>, String> message : messages) {
+                if (message.getSecond().contains(getModel().getThisPlayer())) {
+                    String sender = message.getFirst();
+                    String priv = privateOrPublicMessage(message.getSecond());
+                    if (sender.equals(getModel().getThisPlayer())) {
+                        sender = "You";
+                        if (priv.equals("(private)")) {
+                            priv = "(" + colorize("private with " + message.getSecond().get(0), Attribute.ITALIC()) + ") ";
+                        }
                     }
+                    out.println(colorize(sender + " " + priv, Attribute.BLUE_TEXT()) + " " + message.getThird());
                 }
-                out.println(sender + priv + message.getThird());
             }
         }
         out.println(colorize("<--There aren't any more messages. If you want to return to the homepage, please type 'exit'.-->",Attribute.BOLD()));
@@ -267,7 +334,9 @@ public class TUI extends UI implements Runnable{
 
     private void showBookshelves(){
         state = TUIState.OTHERS;
-        out.println(colorize("MY SHELFIE: OTHER PLAYERS' BOOKSHELVES AND POINTS", Attribute.GREEN_TEXT()));
+        System.out.print(colorize("                                    ", Attribute.GREEN_BACK()));
+        System.out.print(colorize("MY SHELFIE: OTHER PLAYERS' BOOKSHELVES AND POINTS", Attribute.GREEN_BACK()));
+        System.out.println(colorize("                                    ", Attribute.GREEN_BACK()));
         List<String> nicknames = getOtherPlayer();
         List<char[][]> bookshelves = getOtherBookShelves();
         List<List<Integer>> pointPlayers = getOtherPoints();
@@ -277,15 +346,17 @@ public class TUI extends UI implements Runnable{
         printOthersPoint(nicknames.get(0), nicknames.get(1), nicknames.get(2), pointPlayers.get(0), pointPlayers.get(1), pointPlayers.get(2), totalPoints.get(0), totalPoints.get(1), totalPoints.get(2));
     }
 
-    private void showWinner(){
+    @Override
+    protected void showWinner(){
         // se game state è end
-        out.println(colorize("MY SHELFIE: HOME OF " + getModel().getThisPlayer(), Attribute.GREEN_TEXT()));
+        System.out.print(colorize("                                                           ", Attribute.GREEN_BACK()));
+        System.out.print(colorize("MY SHELFIE: HOME OF " + getModel().getThisPlayer(), Attribute.GREEN_BACK()));
+        System.out.println(colorize("                                                           ", Attribute.GREEN_BACK()));
         printGameState(getModel().getGameState());
         out.println("The winner is..." + colorize(getModel().getWinnerPlayer(), Attribute.BOLD(), Attribute.BRIGHT_YELLOW_TEXT()) + "!");
         out.println("Here are the bookshelves and the point of all players:");
-        //da finire
 
-        char[][] bookshelf = fromTileSubjectToChar(getModel().getBookShelfByNickname(getModel().getThisPlayer()));
+        char[][] bookshelf = fromTileSubjectToChar(getModel().getBookShelfByNickname(getModel().getThisPlayer()), false);
         List<Integer> pointPlayer = getModel().getPlayersPointsByNickname(getModel().getThisPlayer());
         int totalPoints = getModel().getTotalPointByNickname(getModel().getThisPlayer());
 
@@ -293,7 +364,6 @@ public class TUI extends UI implements Runnable{
         List<char[][]> othersBookshelves = getOtherBookShelves();
         List<List<Integer>> othersPoints = getOtherPoints();
         List<Integer> othersTotalPoints = getOtherTotalPoints();
-
 
         out.println("              Your Bookshelf:              Your Points:");
         for(int i = 0; i < 6; i++){
@@ -303,19 +373,19 @@ public class TUI extends UI implements Runnable{
             if(i < 5) {
                 printPoint(pointPlayer, i);
             } else {
-                out.println("━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━");
+                out.println("────────────────────────────────────────");
                 out.print("                            Total points = " + totalPoints + printPointOrPoints(totalPoints));
             }
         }
-
+        out.println();
         printOthersBookShelf(nicknames.get(0), nicknames.get(1), nicknames.get(2), othersBookshelves.get(0), othersBookshelves.get(1), othersBookshelves.get(2));
         printOthersPoint(nicknames.get(0), nicknames.get(1), nicknames.get(2), othersPoints.get(0), othersPoints.get(1), othersPoints.get(2), othersTotalPoints.get(0), othersTotalPoints.get(1), othersTotalPoints.get(2));
     }
 
     private void printBoardBookShelfPersonalGoal(char[][] board, char[][] bookshelf, char[][] personalGoal){
         out.println("             Living Room Board:                           Your BookShelf:                   Your Personal Goal:");
-        out.println("     1   2   3   4   5   6   7   8   9                   1   2   3   4   5                " );
-        out.println(getDividerBoard(0) + "               " + getDividerBookShelf(0) + "               " + getDividerBookShelf(0));
+        out.println("     1   2   3   4   5   6   7   8   9                   1   2   3   4   5                  " );
+        out.println(getDividerBoard(0) + "               " + getDividerBookShelf(0) + "               " + getDividerPersonalGoal(0));
 
         for( int i = 0; i < DIM_BOARD; ++i ){
             printLineBoard(i, board);
@@ -324,7 +394,7 @@ public class TUI extends UI implements Runnable{
             if(i < 6){
                 printLineBookShelf(i,bookshelf);
                 out.print("               ");
-                printLineBookShelf(i,personalGoal);
+                printLinePersonalGoal(i,personalGoal);
             } else if (i==6){
                 out.print("                                     ");
                 out.print("Personal Goal Points:");
@@ -337,7 +407,7 @@ public class TUI extends UI implements Runnable{
 
             if( i < DIM_BOARD - 1){
                 if(i < 6)
-                    out.println(getDividerBoard(i+1) + "               "+ getDividerBookShelf(i+1) +"               "+ getDividerBookShelf(i+1) );
+                    out.println(getDividerBoard(i+1) + "               "+ getDividerBookShelf(i+1) +"               "+ getDividerPersonalGoal(i+1) );
                 else if (i==6) {
                     out.println(getDividerBoard(i+1) + "               " + "Legend:         \t \t \t \t \t \t # 1 | 2 | 3 | 4 | 5 | 6");
                 } else {
@@ -392,6 +462,15 @@ public class TUI extends UI implements Runnable{
             case 0 -> { return colorize("╔═══╦═══╦═══╦═══╦═══╗", Attribute.TEXT_COLOR(245,245,246)); }
             case 1, 2, 3, 4, 5 -> { return colorize("╠═══╬═══╬═══╬═══╬═══╣", Attribute.TEXT_COLOR(245,245,246)); }
             case 6 -> { return colorize("╚═══╩═══╩═══╩═══╩═══╝", Attribute.TEXT_COLOR(245,245,246)); }
+            default -> { return ""; }
+        }
+    }
+
+    private String getDividerPersonalGoal(int row){
+        switch (row){
+            case 0 -> { return colorize("┌───┬───┬───┬───┬───┐", Attribute.TEXT_COLOR(245,245,246)); }
+            case 1, 2, 3, 4, 5 -> { return colorize("├───┼───┼───┼───┼───┤", Attribute.TEXT_COLOR(245,245,246)); }
+            case 6 -> { return colorize("└───┴───┴───┴───┴───┘", Attribute.TEXT_COLOR(245,245,246)); }
             default -> { return ""; }
         }
     }
@@ -453,20 +532,61 @@ public class TUI extends UI implements Runnable{
         out.print(result.toString());
     }
 
+    private void printLinePersonalGoal(int row, char[][] matrix){
+        if(matrix!=null) {
+            for (int j = 0; j < DIMCOL_BOOKSHELF; j++) {
+                if (j == 0)
+                    out.print(colorize("│", Attribute.TEXT_COLOR(245, 245, 246)) + toPrintChar(matrix[row][j]) + colorize("│", Attribute.TEXT_COLOR(245, 245, 246)));
+                else if (j < DIMCOL_BOOKSHELF - 1)
+                    out.print(toPrintChar(matrix[row][j]) + colorize("│", Attribute.TEXT_COLOR(245, 245, 246)));
+                else
+                    out.print(toPrintChar(matrix[row][j]) + colorize("│", Attribute.TEXT_COLOR(245, 245, 246)));
+            }
+        }
+    }
+
     private void printLineBookShelf(int row, char[][] matrix) {
-        for(int j = 0; j < DIMCOL_BOOKSHELF; j++){
-            if( j == 0 )
-                out.print( colorize("║ ", Attribute.TEXT_COLOR(245,245,246)) + toPrintChar(matrix[row][j]) + colorize(" ║ ", Attribute.TEXT_COLOR(245,245,246)));
-            else if( j < DIMCOL_BOOKSHELF - 1 )
-                out.print( toPrintChar(matrix[row][j]) + colorize(" ║ ", Attribute.TEXT_COLOR(245,245,246)) );
-            else
-                out.print( toPrintChar(matrix[row][j]) + colorize(" ║", Attribute.TEXT_COLOR(245,245,246)) );
+        if(matrix!=null) {
+            for (int j = 0; j < DIMCOL_BOOKSHELF; j++) {
+                if (j == 0)
+                    out.print(colorize("║", Attribute.TEXT_COLOR(245, 245, 246)) + toPrintChar(matrix[row][j]) + colorize("║", Attribute.TEXT_COLOR(245, 245, 246)));
+                else if (j < DIMCOL_BOOKSHELF - 1)
+                    out.print(toPrintChar(matrix[row][j]) + colorize("║", Attribute.TEXT_COLOR(245, 245, 246)));
+                else
+                    out.print(toPrintChar(matrix[row][j]) + colorize("║", Attribute.TEXT_COLOR(245, 245, 246)));
+            }
         }
     }
 
     private void printOthersBookShelf(String nickname1, String nickname2, String nickname3, char[][] bookShelf1, char[][] bookShelf2, char[][] bookShelf3){
-        out.println("                       " + nickname1 + ":                      " + nickname2 + ":                       " + nickname3 + ":");
-        out.println("               " + getDividerBookShelf(0) + "               " + getDividerBookShelf(0) + "               " + getDividerBookShelf(0));
+        out.print("               " + nickname1);
+        // 21 space for divider
+        int l = 20;
+        while( l - nickname1.length() >= 0){
+            out.print(" ");
+            l--;
+        }
+        out.print( "               " + nickname2);
+        l = 20;
+        while( l - nickname2.length() >= 0){
+            out.print(" ");
+            l--;
+        }
+        out.println("               " + nickname3);
+
+        if(bookShelf1==null && bookShelf2==null && bookShelf3==null){
+            out.println("There aren't other players yet.");
+        }
+        if(bookShelf1!=null) {
+            out.print("               " + getDividerBookShelf(0) + "               ");
+        }
+        if(bookShelf2!=null){
+            out.print(getDividerBookShelf(0) + "               ");
+        }
+        if(bookShelf3!=null) {
+            out.print(getDividerBookShelf(0));
+        }
+        out.println();
         for(int i = 0; i < DIMROW_BOOKSHELF; i++){
             if(bookShelf1!=null){
                 out.print("               ");
@@ -496,44 +616,72 @@ public class TUI extends UI implements Runnable{
         }
     }
 
-    private void printOthersPoint(String nickname1, String nickname2, String nickname3, List<Integer> pointPlayer1, List<Integer> pointPlayer2, List<Integer> pointPlayer3, int total1, int total2, int total3){
-        out.print("                 ");
-        out.println(nickname1 + "        " + nickname2 + "        " + nickname3);
-        //inizio
-        out.print("Common Goal 1:  ");
+    private void printOthersPoint(String nickname1, String nickname2, String nickname3, List<Integer> pointPlayer1, List<Integer> pointPlayer2, List<Integer> pointPlayer3, Integer total1, Integer total2, Integer total3){
+        out.print("                 " + nickname1);
+        int l = 9;
+        while( l - nickname1.length() > 0){
+            out.print(" ");
+            l--;
+        }
+        out.print("               " + nickname2);
+        l = 9;
+        while( l - nickname2.length() > 0){
+            out.print(" ");
+            l--;
+        }
+        out.println("               " + nickname3);
+        out.print("Adjacent Tiles:  ");
         printPoint(pointPlayer1, 0);
         printPoint(pointPlayer2, 0);
         printPoint(pointPlayer3, 0);
-        out.print("Common Goal 2:  ");
+        out.println();
+        out.print("Common Goal 1:   ");
         printPoint(pointPlayer1, 1);
         printPoint(pointPlayer2, 1);
         printPoint(pointPlayer3, 1);
-        out.print("End Game:       ");
+        out.println();
+        out.print("Common Goal 2:   ");
         printPoint(pointPlayer1, 2);
         printPoint(pointPlayer2, 2);
         printPoint(pointPlayer3, 2);
-        out.print("Personal goal:  ");
+        out.println();
+        out.print("End Game:        ");
         printPoint(pointPlayer1, 3);
         printPoint(pointPlayer2, 3);
         printPoint(pointPlayer3, 3);
-        out.print("Adjacent Tiles: ");
+        out.println();
+        out.print("Personal goal:   ");
         printPoint(pointPlayer1, 4);
         printPoint(pointPlayer2, 4);
         printPoint(pointPlayer3, 4);
         out.println();
-        out.println("Total points:   ");
-        out.print(total1+ " " + printPointOrPoints(total1) + "        ");
-        out.print(total2+ " " + printPointOrPoints(total2) + "        ");
-        out.print(total3+ " " + printPointOrPoints(total3) + "        ");
+        out.print(colorize("Total points:    ", Attribute.BOLD()));
+        if(total1 != null) {
+            out.print(total1 + " " + printPointOrPoints(total1) + "               ");
+        }
+        if(total2 != null) {
+            out.print(total2 + " " + printPointOrPoints(total2) + "               ");
+        }
+        if(total3 != null) {
+            out.print(total3 + " " + printPointOrPoints(total3));
+        }
         out.println();
     }
 
-    private char[][] fromTileSubjectToChar(TileSubject[][] matrix){
+    private char[][] fromTileSubjectToChar(TileSubject[][] matrix, boolean board){
         if(matrix == null) return null;
         char[][] result = new char[matrix.length][matrix[0].length];
         for(int i = 0; i < matrix.length; i++){
             for(int j = 0; j < matrix[0].length; j++){
-                result[i][j] = getCharFromTileType(matrix[i][j].getTileType());
+                if (matrix[i][j] == null && INIT_MATRIX[i][j] == null && board) {
+                    result[i][j] = ' ';
+                } else if (matrix[i][j] == null && INIT_MATRIX[i][j] != null && board) {
+                    result[i][j] = EMPTY;
+                } else if (matrix[i][j] == null && !board) {
+                    result[i][j] = EMPTY;
+                } else {
+                    result[i][j] = getCharFromTileType(matrix[i][j].getTileType());
+                }
             }
         }
         return result;
@@ -544,7 +692,11 @@ public class TUI extends UI implements Runnable{
         char[][] result = new char[matrix.length][matrix[0].length];
         for(int i = 0; i < matrix.length; i++){
             for(int j = 0; j < matrix[0].length; j++){
-                result[i][j] = getCharFromTileType(matrix[i][j]);
+                if(matrix[i][j]==null){
+                    result[i][j]=EMPTY;
+                } else {
+                    result[i][j] = getCharFromTileType(matrix[i][j]);
+                }
             }
         }
         return result;
@@ -586,14 +738,14 @@ public class TUI extends UI implements Runnable{
     }
 
     private String printPointOrPoints(int point){
-        if(point == 0) return "point";
+        if(point == 1) return " point ";
         if(point == -1) return "";
-        return "points";
+        return " points";
     }
 
     private void printPoint(List<Integer> point, int index){
         if(point != null)
-            out.print(point.get(index) + " " + printPointOrPoints(point.get(index)) + "        ");
+            out.print(point.get(index) + " " + printPointOrPoints(point.get(index)) + "               ");
     }
 
     private String privateOrPublicMessage(List<String> receivers){
@@ -603,10 +755,8 @@ public class TUI extends UI implements Runnable{
 
     private List<String> getOtherPlayer(){
         List<String> nicknames = new ArrayList<>(getModel().getPlayers().stream().filter(n -> !n.equals(getModel().getThisPlayer())).toList());
-        if(nicknames.size() <= 2){
-            while(nicknames.size()-3 < 0){
-                nicknames.add("");
-            }
+        while(nicknames.size()-3 < 0){
+            nicknames.add("");
         }
         return nicknames;
     }
@@ -614,9 +764,9 @@ public class TUI extends UI implements Runnable{
     private List<char[][]> getOtherBookShelves(){
         List<String> nicknames = getOtherPlayer();
         List<char[][]> bookshelves = new ArrayList<>();
-        char[][] bookShelf1 = fromTileSubjectToChar(getModel().getBookShelfByNickname(nicknames.get(0)));
-        char[][] bookShelf2 = fromTileSubjectToChar(getModel().getBookShelfByNickname(nicknames.get(1)));
-        char[][] bookShelf3 = fromTileSubjectToChar(getModel().getBookShelfByNickname(nicknames.get(2)));
+        char[][] bookShelf1 = fromTileSubjectToChar(getModel().getBookShelfByNickname(nicknames.get(0)), false);
+        char[][] bookShelf2 = fromTileSubjectToChar(getModel().getBookShelfByNickname(nicknames.get(1)), false);
+        char[][] bookShelf3 = fromTileSubjectToChar(getModel().getBookShelfByNickname(nicknames.get(2)), false);
         bookshelves.add(bookShelf1);
         bookshelves.add(bookShelf2);
         bookshelves.add(bookShelf3);
@@ -626,9 +776,9 @@ public class TUI extends UI implements Runnable{
     private List<List<Integer>> getOtherPoints(){
         List<String> nicknames = getOtherPlayer();
         List<List<Integer>> points = new ArrayList<>();
-        List<Integer> pointPlayer1 = getModel().getPlayersPoints().get(nicknames.get(0));
-        List<Integer> pointPlayer2 = getModel().getPlayersPoints().get(nicknames.get(1));
-        List<Integer> pointPlayer3 = getModel().getPlayersPoints().get(nicknames.get(2));
+        List<Integer> pointPlayer1 = getModel().getPlayersPointsByNickname(nicknames.get(0));
+        List<Integer> pointPlayer2 = getModel().getPlayersPointsByNickname(nicknames.get(1));
+        List<Integer> pointPlayer3 = getModel().getPlayersPointsByNickname(nicknames.get(2));
         points.add(pointPlayer1);
         points.add(pointPlayer2);
         points.add(pointPlayer3);
@@ -645,16 +795,18 @@ public class TUI extends UI implements Runnable{
     }
 
     private void printLegendMoves(){
-        out.println("Legend:");
-        out.println("Here are the actions you can make during the game:");
-        out.println(" TYPE        DESCRIPTION");
+        out.print(colorize("                                                                   ", Attribute.GREEN_BACK()));
+        out.print(colorize("MY SHELFIE: LEGEND", Attribute.GREEN_BACK()));
+        out.print(colorize("                                                                   ", Attribute.GREEN_BACK()));
+        out.println(colorize("Here are the actions you can make during the game:", Attribute.ITALIC()));
+        out.println(colorize(" TYPE        DESCRIPTION", Attribute.ITALIC()));
         out.println(" play        use it during your turn in order to move tiles from the board to your bookshelf.");
         out.println(" message     use it to send messages to other players.");
         out.println(" chat        use it to see the chat.");
         out.println(" others      use it to see other players' bookshelves and points.");
         out.println(" exit        use this to leave chat, others visual or help legend.");
         out.println(" quit        use it to leave the game, you will be directed to the welcome page so you can play again.");
-        out.println("<--- Please enter exit to return to the homepage. --->");
+        out.println(colorize("<--- Please enter exit to return to the homepage. --->", Attribute.BOLD()));
     }
 
     private String toPrintChar(char c){
@@ -678,7 +830,7 @@ public class TUI extends UI implements Runnable{
                return colorize(" " + c + " ", Attribute.MAGENTA_BACK());
            }
            case 'b' -> {
-               return colorize(" " + c + " ", Attribute.BRIGHT_WHITE_TEXT());
+               return colorize(" " + c + " ", Attribute.WHITE_BACK());
            }
            default -> {
                return "   ";
